# juce-bootstrap

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
source/gui/: CMakeLists.txt  GuiMain.cpp
source/plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/views/: CMakeLists.txt  MainView.cpp  MainView.h
